# biosim

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
cpp/: Analysis.cpp  CMakeLists.txt  Dockerfile  Sim.cpp
cpp/include/: NeuralNet.h  Random.h  Sim.h  Types.h
lib/: Agent.cpp  Analysis.cpp  Config.cpp  Genome.cpp  NeuralNet.cpp  Sim.cpp  main.cpp
lib/include/: Agent.h  Analysis.h  Config.h  Gene.h  Genome.h  Grid.h  NeuralNet.h  Random.h  Sim.h
src/: binder.cpp  binder.h  config.yml  main.py  ui.py
tests/: tests.cpp
