[build-system]
requires = [
    "setuptools>=61.0",
    "pybind11"
]
build-backend = "setuptools.build_meta"

[project]
name = "biosim"
version = "0.0.1"
authors = [
  { name="Renan S", email="author@example.com" },
]
description = "Bio Sim"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/renanGit/biosim"
Issues = "https://github.com/renanGit/biosim/issues"